--- a/css/primer anuncio.css
+++ b/css/primer anuncio.css
@@ -5,7 +5,7 @@
     align-items: center;
     justify-content: space-between;
     height: 1000px;
-    background-image: url(/imagenes/primer-anuncio.jpeg);
+    background-image: url(../Imagen/anuncio\ 1/primer-anuncio.jpeg);
     background-size: cover;
     background-position: center;
     padding: 0 50px;
