--- a/css/root.css
+++ b/css/root.css
@@ -4,4 +4,5 @@
     --color-icono-header: #f4f4f4;
     --color-botones: #21243c;
     --hover-botones: #3a3f5c;
+    --color-fondo-menu: #21243d;
 }
