--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,15 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 @import url(/css/root.css);
 @import url(/css/header.css);
 @import url(/css/primer\ anuncio.css);
+@import url(/css/menu.css);
 
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Rubik", sans-serif;
 }
 
 body{
