--- a/css/root.css
+++ b/css/root.css
@@ -5,4 +5,6 @@
     --color-botones: #21243c;
     --hover-botones: #3a3f5c;
     --color-fondo-menu: #21243d;
+    --color-fondo-segundo-anuncio: #ffd17e;
+    --color-texto-segundo-anuncio: #333;
 }
