--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 @import url(/css/header.css);
 @import url(/css/primer\ anuncio.css);
 @import url(/css/menu.css);
+@import url(/css/segundo\ anuncio.css);
 
 *{
     padding: 0;
