--- a/css/root.css
+++ b/css/root.css
@@ -7,4 +7,5 @@
     --color-fondo-menu: #21243d;
     --color-fondo-segundo-anuncio: #ffd17e;
     --color-texto-segundo-anuncio: #333;
+    --color-fondo-estadisticas: #21243d;
 }
