--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import url(/css/primer\ anuncio.css);
 @import url(/css/menu.css);
 @import url(/css/segundo\ anuncio.css);
+@import url(/css/estadisticas.css);
 
 *{
     padding: 0;
