--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@
 @import url(/css/menu.css);
 @import url(/css/segundo\ anuncio.css);
 @import url(/css/estadisticas.css);
+@import url(/css/tercer\ anuncio.css);
 
 *{
     padding: 0;
