--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import url(/css/segundo\ anuncio.css);
 @import url(/css/estadisticas.css);
 @import url(/css/tercer\ anuncio.css);
+@import url(/css/comentario.css);
 
 *{
     padding: 0;
