--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,7 @@
 @import url(/css/estadisticas.css);
 @import url(/css/tercer\ anuncio.css);
 @import url(/css/comentario.css);
+@import url(/css/suscripcion.css);
 
 *{
     padding: 0;
