--- a/css/root.css
+++ b/css/root.css
@@ -8,4 +8,7 @@
     --color-fondo-segundo-anuncio: #ffd17e;
     --color-texto-segundo-anuncio: #333;
     --color-fondo-estadisticas: #21243d;
+    --color-letra-suscripciones: #555;
+    --color-fondo-footer: #111111;
+    --color-color-redes: #333333;
 }
