--- a/css/comentario.css
+++ b/css/comentario.css
@@ -2,7 +2,7 @@
 
 .comentario{
     height: 1000px; 
-    background-image: url(/Imagen/comentario/Fondo.jpg); 
+    background-image: url(../Imagen/comentario/Fondo.jpg); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
